fix problems with z-index

--- a/dynamic/css/style.sass
+++ b/dynamic/css/style.sass
@@ -65,11 +65,13 @@ p#sponsors
       padding-left: 10px
     &#nord
       width: 15%
+      position: relative
+      z-index: 1
     &#rosa
       width: 20%
       position: relative
       right: 35px
-      z-index: -1
+      z-index: 0
     &#eed
       width: 15%
       padding-left: 5px
